fix: width caused overflow

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,6 @@ header {
   margin: auto;
   padding: 8px;
   max-width: 1400px;
-  width: 100%;
   height: 40px;
 }
 
