--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -5,7 +5,6 @@
   align-items: center;
   margin: auto;
   max-width: 1400px;
-  width: 100%;
   padding: 8px;
   height: calc(100% - 72px); /* prob temp fix */
 }
